--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "sanity start",
     "test": "sanity check",
-    "build": "sanity build -y"
+    "build": "sanity build public -y"
   },
   "keywords": [
     "sanity"
@@ -29,6 +29,6 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@sanity/cli": "^2.30.2"
+    "@sanity/cli": "^2.33.3"
   }
 }
